--- a/index.html
+++ b/index.html
@@ -5,9 +5,17 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Hello there</h1>
+    <h1>Testing Damage Formulas in Polytopia</h1>
+    <p
 
-    <p id="Thing"></p>
+    <h3>Attack Force</h3>
+    <p id="attackForce"></p>
+    <h3>Defense Force</h3>
+    <p id="defenseForce"></p>
+    <h3>Total Damage</h3>
+    <p id="totalDamage"></p>
+    <h3>Attack Result</h3>
+    <p id="attackResult"></p>
     <script src="app.js"></script>
   </body>
 </html>
