--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Testing Damage Formulas in Polytopia</h1>
+    <h1>Testing Damage Formulas in Polytopia</h1></br>
+    <h2>Calculations</h2>
     <h3>Attack Force</h3>
     <p id="attackForce"></p>
     <h3>Defense Force</h3>
     <p id="defenseForce"></p>
     <h3>Total Damage</h3>
-    <p id="totalDamage"></p>
+    <p id="totalDamage"></p></br>
+    <h2>Result</h2>
     <h3>Attack Result</h3>
     <p id="attackResult"></p>
     <script src="app.js"></script>
