--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Test</title>
     <link rel="stylesheet" href="style.css">
   </head>
+  
   <body>
     <h1>Testing Damage Formulas in Polytopia</h1></br>
     <h2>Calculations</h2>
@@ -16,6 +17,9 @@
     <h2>Result</h2>
     <h3>Attack Result</h3>
     <p id="attackResult"></p>
+    <p id="defenseResult"></p>
+    <p id="attackerNewHealth"></p>
+    <p id="defenderNewHealth"></p>
     <script src="app.js"></script>
   </body>
 </html>
