--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   
   <body>
     <h1>Testing Damage Formulas in Polytopia</h1></br>
+  
     <h2>Calculations</h2>
     <h3>Attack Force</h3>
     <p id="attackForce"></p>
@@ -14,11 +15,15 @@
     <p id="defenseForce"></p>
     <h3>Total Damage</h3>
     <p id="totalDamage"></p></br>
-    <h2>Result</h2>
     <h3>Attack Result</h3>
     <p id="attackResult"></p>
+    <h3>Defense Result</h3>
     <p id="defenseResult"></p>
+
+    <h2>Results</h2>
+    <h3>Attacker New Health</h3>
     <p id="attackerNewHealth"></p>
+    <h3>Defender New Health</h3>
     <p id="defenderNewHealth"></p>
     <script src="app.js"></script>
   </body>
